# DynamoRioClientPrac

./: CMakeLists.txt  myclient.c  readme.rst
